apps/immich-public-proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-public-proxy
  namespace: immich-public-proxy
  labels:
    app.kubernetes.io/name: immich-public-proxy
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: immich-public-proxy
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
